# Cazam

./: .gitignore  LICENSE  README.md  bars.py  config.py  current_os.py  defaults.py  gradient.py  main.py  nohup.out  palette.py  pyproject.toml
core/: __init__.py  core.py
cover/: extract.py  mp3.py
shaders/: gradient.frag
src/: bars.py  config.py  current_os.py  gradient.py  palette.py
src/core/: core.py
src/cover/: __init__.py
src/system/: linux.py  system.py
system/: __init__.py  system.py
