[project]
name = "cazam"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "cffi==2.0.0",
    "dbus-next==0.2.3",
    "eyed3==0.9.9",
    "materialyoucolor==3.0.2",
    "numpy==2.4.3",
    "pillow==12.1.1",
    "platformdirs==4.9.4",
    "pyaudio==0.2.14",
    "raylib==5.5.0.4",
    "setproctitle==1.3.7",
    "sounddevice==0.5.5",
]
